--- a/build.gradle
+++ b/build.gradle
@@ -18,7 +18,7 @@ plugins {
 apply plugin: 'net.minecraftforge.gradle'
 apply plugin: 'org.parchmentmc.librarian.forgegradle'
 
-version = '0.1 - 1.18.2'
+version = '0.2-1.18.2'
 group = 'net.hir0shiyt.randomenchants2' // http://maven.apache.org/guides/mini/guide-naming-conventions.html
 archivesBaseName = 'randomenchants2'
 
