--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -19,7 +19,7 @@ modId="randomenchants2" #mandatory
 # The version number of the mod - there's a few well known ${} variables useable here or just hardcode it
 # ${file.jarVersion} will substitute the value of the Implementation-Version as read from the mod's JAR file metadata
 # see the associated build.gradle script for how to populate this completely automatically during a build
-version="${file.jarVersion}" #mandatory
+version="1.1" #mandatory
  # A display name for the mod
 displayName="Random Enchants 2" #mandatory
 # A URL to query for updates for this mod. See the JSON update specification https://mcforge.readthedocs.io/en/latest/gettingstarted/autoupdate/
@@ -27,15 +27,13 @@ displayName="Random Enchants 2" #mandatory
 # A URL for the "homepage" for this mod, displayed in the mod UI
 #displayURL="https://change.me.to.your.mods.homepage.example.invalid/" #optional
 # A file name (in the root of the mod JAR) containing a logo for display
-logoFile= "../assets/randomenchants2/ModLogo.png" #optional
+logoFile= "ModLogo.png" #optional
 # A text field displayed in the mod UI
-credits="IntelliJ, Java & hir0shiyt" #optional
+credits="IntelliJ, Java, hir0shiyt & tfarecnim" #optional
 # A text field displayed in the mod UI
 authors="hir0siyt" #optional
 # The description text for the mod (multi line!) (#mandatory)
-description='''
-Adding enchantments from the mod Random Enchants 2
-'''
+description='''Adding enchantments from the mod Random Enchants 2'''
 # A dependency - use the . to indicate dependency for a specific modid. Dependencies are optional.
 [[dependencies.randomenchants2]] #optional
     # the modid of the dependency
